file authority changed

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <!-- <meta name="theme-color" content="#000000" /> -->
-        <meta name="description" content="Web site created using create-react-app"/>
+        <meta name="description" content="Interior Design Web Application. Designed and Developed by Maru, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things." />
+        <meta name="author" content="Maruf; Aleam; Mujahid">
+        <meta property="og:description"
+            content="Interior Design Web Application. Designed and Developed by Maru, Alem and Mujahid. The Desgine was converted from Figma, then Developed with React and React-Helmet, Context API, Router, Media-Breakpoint Observer, Slick Slider, Bootstrap any many sweet things.">
         <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Synextic</title>
+        <title>Interior Design Web Application</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
