drag 'n drop done

--- a/checkout-1.html
+++ b/checkout-1.html
@@ -888,7 +888,31 @@
             </div>
             <div class="col-lg-4">
               <div class="summery">
-                
+                <h4 class="titles lines">order summery</h4>
+                <div class="items lines">
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <td class='text'>Photos</td>
+                        <td class='amount'>No Photos Added</td>
+                      </tr>
+                      <tr>
+                        <td class='text'>Amount</td>
+                        <td class='amount'>0.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="total">
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <td class='text'>Total</td>
+                        <td class='amount'> $ 0.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
