--- a/checkout01-complete.html
+++ b/checkout01-complete.html
@@ -879,11 +879,68 @@
         <form action="" method="post">
           <div class="row">
             <div class="col-lg-8">
-              <div class="dropbox">
-                <h4>Drag & drop your files here</h4>
-                <h6>or</h6>
-                <button class="btn">Add files</button>
-                <input type="file" name="primary" id="primary" />
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="singles">
+                    <div class="imgs">
+                      <img
+                        src="./images/portfolio9.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="details">
+                      <h5 class="title">ch-img.png</h5>
+                      <h6 class="sizes">1 MB | 250X750 px</h6>
+                    </div>
+                    <button type="button" class="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="singles">
+                    <div class="imgs">
+                      <img
+                        src="./images/portfolio9.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="details">
+                      <h5 class="title">ch-img.png</h5>
+                      <h6 class="sizes">1 MB | 250X750 px</h6>
+                    </div>
+                    <button type="button" class="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="singles">
+                    <div class="imgs">
+                      <img
+                        src="./images/portfolio9.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div class="details">
+                      <h5 class="title">ch-img.png</h5>
+                      <h6 class="sizes">1 MB | 250X750 px</h6>
+                    </div>
+                    <button type="button" class="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="uploads">
+                    <i class="far fa-image"></i> &nbsp;
+                    <h6 class="title">Add more photos</h6>
+                    <input type="file" name="img" id="secondary">
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-lg-4">
