--- a/checkout01-complete.html
+++ b/checkout01-complete.html
@@ -983,7 +983,7 @@
                         <button type="button" class="btn cancel">Cancel</button>
                       </div>
                       <div class="col-lg-6">
-                        <button type="button" class="btn next" disabled>Next</button>
+                        <button type="button" class="btn next">Next</button>
                       </div>
                     </div>
                   </div>
