--- a/checkout-1.html
+++ b/checkout-1.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/checkout.css" />
     <link rel="stylesheet" href="css/checkout01.css" />
     <link rel="stylesheet" href="css/menu2.css" />
     <link rel="icon" href="images/" />
@@ -919,14 +920,16 @@
                 </div>
               </div>
               <div class="submits">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="row">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="row">
                       <div class="col-lg-6">
                         <button type="button" class="btn cancel">Cancel</button>
                       </div>
                       <div class="col-lg-6">
-                        <button type="button" class="btn next" disabled>Next</button>
+                        <button type="button" class="btn next" disabled>
+                          Next
+                        </button>
                       </div>
                     </div>
                   </div>
