--- a/checkout-2.html
+++ b/checkout-2.html
@@ -863,16 +863,21 @@
       <div class="container">
         <div class="heading">
           <div class="row">
-            <div class="col-md-12 col-sm-12 col-12">
-              <h6 class="steps">Step 1 of 5</h6>
+            <div class="col-md-2 col-sm-2 col-2">
+              <h6 class="steps">Step 2 of 5</h6>
             </div>
-            <div class="col-md-12 col-sm-12 col-12">
-              <h2 class="titles">Upload your files</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-sm-6 col-6">
+              <h2 class="titles">
+                Select design style that reflects vibe of the property
+              </h2>
             </div>
+          </div>
+          <div class="row">
             <div class="col-md-12 col-sm-12 col-12">
               <h6 class="terms">
-                Please make sure you upload high quality photos (size greater
-                than 1MB/ 3600x2400px)
+                Please choose the main direction of the style of your property
               </h6>
             </div>
           </div>
@@ -880,68 +885,11 @@
         <form action="" method="post">
           <div class="row">
             <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="singles">
-                    <div class="imgs">
-                      <img
-                        src="./images/portfolio9.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                    </div>
-                    <div class="details">
-                      <h5 class="title">ch-img.png</h5>
-                      <h6 class="sizes">1 MB | 250X750 px</h6>
-                    </div>
-                    <button type="button" class="remove">
-                      <i class="fas fa-times"></i>
-                    </button>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="singles">
-                    <div class="imgs">
-                      <img
-                        src="./images/portfolio9.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                    </div>
-                    <div class="details">
-                      <h5 class="title">ch-img.png</h5>
-                      <h6 class="sizes">1 MB | 250X750 px</h6>
-                    </div>
-                    <button type="button" class="remove">
-                      <i class="fas fa-times"></i>
-                    </button>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="singles">
-                    <div class="imgs">
-                      <img
-                        src="./images/portfolio9.jpg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                    </div>
-                    <div class="details">
-                      <h5 class="title">ch-img.png</h5>
-                      <h6 class="sizes">1 MB | 250X750 px</h6>
-                    </div>
-                    <button type="button" class="remove">
-                      <i class="fas fa-times"></i>
-                    </button>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="uploads">
-                    <i class="far fa-image"></i> &nbsp;
-                    <h6 class="title">Add more photos</h6>
-                    <input type="file" name="img" id="secondary" />
-                  </div>
-                </div>
+              <div class="dropbox">
+                <h4>Drag & drop your files here</h4>
+                <h6>or</h6>
+                <button class="btn">Add files</button>
+                <input type="file" name="primary" id="primary" />
               </div>
             </div>
             <div class="col-lg-4">
@@ -984,7 +932,9 @@
                         <button type="button" class="btn cancel">Cancel</button>
                       </div>
                       <div class="col-lg-6">
-                        <button type="button" class="btn next">Next</button>
+                        <button type="button" class="btn next" disabled>
+                          Next
+                        </button>
                       </div>
                     </div>
                   </div>
