--- a/checkout-2.html
+++ b/checkout-2.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/checkout.css" />
-    <link rel="stylesheet" href="css/checkout01.css" />
+    <link rel="stylesheet" href="css/checkout02.css" />
     <link rel="stylesheet" href="css/menu2.css" />
     <link rel="icon" href="images/" />
     <title>Purchase Step 1</title>
@@ -885,11 +885,74 @@
         <form action="" method="post">
           <div class="row">
             <div class="col-lg-8">
-              <div class="dropbox">
-                <h4>Drag & drop your files here</h4>
-                <h6>or</h6>
-                <button class="btn">Add files</button>
-                <input type="file" name="primary" id="primary" />
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="options">
+                    <input
+                      type="radio"
+                      name="option"
+                      id="opt01"
+                      class="default"
+                    />
+                    <label class="single" for="opt01">
+                      <span class="img-area"
+                        ><img
+                          src="./images/ch-img.png"
+                          alt="ch-img.png"
+                          class="img-fluid"
+                      /></span>
+                      <span class="text-area">
+                        <h6>Lorem ipsum dolor sit amet.</h6>
+                      </span>
+                    </label>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="options">
+                    <span>
+                      <input
+                        type="radio"
+                        name="option"
+                        id="opt02"
+                        class="default"
+                      />
+                      <label class="single" for="opt02">
+                        <span class="img-area"
+                          ><img
+                            src="./images/ch-img.png"
+                            alt="ch-img.png"
+                            class="img-fluid"
+                        /></span>
+                        <span class="text-area">
+                          <h6>Lorem ipsum dolor sit amet.</h6>
+                        </span>
+                      </label>
+                    </span>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="options">
+                    <span>
+                      <input
+                        type="radio"
+                        name="option"
+                        id="opt03"
+                        class="default"
+                      />
+                      <label class="single" for="opt03">
+                        <span class="img-area"
+                          ><img
+                            src="./images/ch-img.png"
+                            alt="ch-img.png"
+                            class="img-fluid"
+                        /></span>
+                        <span class="text-area">
+                          <h6>Lorem ipsum dolor sit amet.</h6>
+                        </span>
+                      </label>
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-lg-4">
