--- a/checkout-3.html
+++ b/checkout-3.html
@@ -984,6 +984,27 @@
                       </div>
                       <div class="row mb-32">
                         <div class="col-lg-4">
+                          <p class="titles">reference</p>
+                        </div>
+                        <div class="col-lg-7">
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <button type="button" class="choose">
+                                <i class="far fa-images"></i> choose
+                              </button>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <p class="alerts">
+                                You can add upto 3 references
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row mb-32">
+                        <div class="col-lg-4">
                           <p class="titles">description</p>
                         </div>
                         <div class="col-lg-7">
